# swd2k_prog

./: CMakeLists.txt  README.md  before_refactoring_yavasiliev_done1.cpp  build.bat  clean.bat  run_tests.bat
241001_cpp_compilation/: arbuz.cbp  arbuz.depend  main.cpp
insertion_sort/: CMakeLists.txt  run_insertion_sort.bat
insertion_sort/include/insertion_sort/: io.hpp  sortings.hpp
insertion_sort/src/: io.cpp  main.cpp  sortings.cpp
insertion_sort/tests/: CMakeLists.txt  test_sortings.cpp
menu_homework3/: .gitignore  CMakeLists.txt  build.bat  main.cpp  menu.hpp  menu_functions.cpp  menu_functions.hpp  menu_items.cpp  menu_items.hpp
projects/: CMakeLists.txt
projects/insertion_sort/: CMakeLists.txt  main.cpp  run_insertion_sort.bat
projects/insertion_sort/sortings/: CMakeLists.txt  sortings.cpp
projects/menu_homework3/: CMakeLists.txt  main.cpp  menu_functions.cpp  menu_functions.hpp  menu_items.hpp
projects/unit_test_exmaple/: CMakeLists.txt
projects/unit_test_exmaple/src/: CMakeLists.txt  sortings.hpp
projects/unit_test_exmaple/test/: CMakeLists.txt  test_insertion.cpp
